# TimeTracker

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yaml  ci.yaml  tests.yaml
app/api/routers/: projects.py
app/storage/: exceptions.py  time_entries_storage.py
backend/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/app/: api.py  app.py  config.py  models.py
backend/app/api/: context.py  models.py
backend/app/api/routers/: projects.py  time_entries.py
backend/app/db/: database.py  deps.py  models.py
backend/app/storage/: common.py  projects_storage.py  time_entries_storage.py
backend/migrations/: env.py
backend/migrations/versions/: dd199aaef2dd_init.py
backend/postgres/init/: init.sql
docker/: app.sh
migrations/: env.py
migrations/versions/: dd199aaef2dd_init.py
tests/: .env-tests  conftest.py
tests/api/: conftest.py  test_base.py  test_projects.py  test_stats.py  test_time_entries.py
tests/unit/: test_utils.py
time_tracker/: app.py  config.py
time_tracker/api/: context.py  models.py
time_tracker/api/models/: __init__.py  models.py  stats_models.py
time_tracker/api/routers/: projects.py  stats.py  time_entries.py
time_tracker/db/: database.py  deps.py
time_tracker/storage/: common.py  models.py  projects_storage.py  stats_storage.py  time_entries_storage.py
time_tracker/utils/: time_intervals.py
